# UTermux

./: Cargo.toml  README.md  build.rs  config.json  setting.ini
.github/workflows/: ticket.yml
src/: main.rs
src/Gui/: Gui.rs  Login.rs  Setting.rs  mod.rs  start_grabbing_tickets.rs  timed_ticket_grabbing.rs
src/api/: info.rs  mod.rs  queryMobilePhone.rs  receive.rs
src/utils/: config.rs  mod.rs  proxy.rs  request.rs
