[package]
name = "UTermux"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"

[dependencies]
crossterm = { version = "0.28.1" }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
rustyline = "15.0.0"
ratatui = { version = "0.29.0", features = ["widget-calendar"] }
color-eyre = "0.6.3"
chrono = "0.4.39"
dirs = "6.0.0"
time = "0.3.37"
once_cell = "1.20.2"
base64 = "0.22.1"
winres = "0.1.12"
fastrand = "2.3.0"
