[package]
name = "UTermux-cli"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
env_logger = "0.11.8"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = "0.12.20"
log = "0.4.27"
chrono = { version = "0.4", features = ["clock"] }
futures = "0.3"
